force-app/main/default/objects/Technology__c/Technology__c.object-meta.xml
<CustomObject>
    <description>Technologies being used or implemented for a project/opportunity/account</description>
    <label>Technology</label>
    <nameField>
        <label>Technology Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Technologies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>