force-app/main/default/objects/Technology__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Technologies</relationshipLabel>
    <relationshipName>Technologies</relationshipName>
    <type>Lookup</type>
</CustomField>