force-app/main/default/objects/Technology__c/fields/Caelius_Implemented__c.field-meta.xml
<CustomField>
    <fullName>Caelius_Implemented__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Did Caelius Implement this technology?</inlineHelpText>
    <label>Caelius Implemented</label>
    <type>Checkbox</type>
</CustomField>