force-app/main/default/objects/Technology__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMS</fullName>
            </value>
            <value>
                <fullName>CMS</fullName>
            </value>
            <value>
                <fullName>CTI</fullName>
            </value>
            <value>
                <fullName>Document Execution</fullName>
            </value>
            <value>
                <fullName>Document Generation</fullName>
            </value>
            <value>
                <fullName>Document Management</fullName>
            </value>
            <value>
                <fullName>ERP</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>LMS</fullName>
            </value>
            <value>
                <fullName>LSS</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>MuleSoft Anypoint</fullName>
            </value>
            <value>
                <fullName>MuleSoft Anypoint Partner Manager</fullName>
            </value>
            <value>
                <fullName>MuleSoft Automation: RPA</fullName>
            </value>
            <value>
                <fullName>MuleSoft Automation IDP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Salesforce Commerce</fullName>
            </value>
            <value>
                <fullName>Salesforce CPQ</fullName>
            </value>
            <value>
                <fullName>Salesforce Experience Cloud</fullName>
            </value>
            <value>
                <fullName>Salesforce Field Service Lightning</fullName>
            </value>
            <value>
                <fullName>Salesforce Health Cloud</fullName>
            </value>
            <value>
                <fullName>Salesforce Industry Cloud</fullName>
            </value>
            <value>
                <fullName>Salesforce OMS</fullName>
            </value>
            <value>
                <fullName>Salesforce Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Salesforce Service Cloud</fullName>
            </value>
            <value>
                <fullName>Salesforce Service Cloud Voice</fullName>
            </value>
            <value>
                <fullName>Slack</fullName>
            </value>
            <value>
                <fullName>WMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>